--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-, "src/app/dashboard/page.tsx.bkp"  ],
+, "src/app/dashboard/page.tsx.bkp", "src/app/admin/clubs/page.tsx"  ],
   "exclude": [
     "node_modules"
   ]
